--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "apollo-server-express": "^2.4.8",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
-    "graphql-import": "^0.7.1"
+    "graphql-import": "^0.7.1",
+    "mongoose": "^5.4.22"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
