--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "graphql": "^14.2.1",
     "graphql-import": "^0.7.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.22"
   },
   "devDependencies": {
