--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^4.4.0-beta.8",
     "react-scripts": "2.1.8"
   },
   "scripts": {
